--- a/index.html
+++ b/index.html
@@ -8,5 +8,16 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <ul>
+            <li>
+                <a href="recipes/lasagne.html">Lasagne</a>
+            </li>
+            <li>
+                <a href="recipes/">Recipe 2</a>
+            </li>
+            <li>
+                <a href="recipes/">Recipe 3</a>
+            </li>
+        </ul>
     </body>
 </html>
