Added description to lasagne

--- a/recipes/lasagne.html
+++ b/recipes/lasagne.html
@@ -10,7 +10,18 @@
         <a href="../index.html">Homepage</a>
         <h1>Lasagne</h1>
         <img src="../images/lasagne.jpeg">
-        <h3>Ingredients</h3>
+        <h2>Description</h2>
+        <p>
+            This is a classic dish everyone should have 
+            in their repertoire. As a home cook or professional 
+            chef, knowing how to make a good lasagne is invaluable.
+        </p>
+        <p>
+            This recipe is both delicious, and easy to follow! 
+            It features ingredients most will have in their pantry, 
+            which makes it useful even for a regular Tuesday night.
+        </p>
+        <h2>Ingredients</h2>
         <ul>
             <li>1 Large Onion</li>
             <li>500g Ground Beef</li>
@@ -26,12 +37,12 @@
             <li>250g Parmesan</li>
             <li>2 Tbsp Flour</li>
         </ul>
-        <h3>Method</h3>
+        <h2>Steps</h2>
         <ol>
             <li>Preheat oven to 180 degrees Celsius</li>
             <li>Fry onion, herbs, spice and salt in a large pan.</li>
             <li>When onions are golden brown, add mince to the pan.</li>
-            <li>When the mice is cooked, add the tinned tomato.</li>
+            <li>When the mince is cooked, add the tinned tomato.</li>
             <li>Simmer for 15 minutes </li>
             <li>Add tomato paste.</li>
             <li>Melt butter in a saucepan.</li>
