Added 2 recipe files and made minor changes to current files

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
                 <a href="recipes/lasagne.html">Lasagne</a>
             </li>
             <li>
-                <a href="recipes/">Recipe 2</a>
+                <a href="recipes/cheesy-mashed-potato.html">Cheesy Mashed Potato</a>
             </li>
             <li>
-                <a href="recipes/">Recipe 3</a>
+                <a href="recipes/peanut-butter-smoothie.html">Peanut Butter Smoothie</a>
             </li>
         </ul>
     </body>
