--- a/recipes/lasagne.html
+++ b/recipes/lasagne.html
@@ -9,7 +9,7 @@
     <body>
         <a href="../index.html">Homepage</a>
         <h1>Lasagne</h1>
-        <img src="../images/lasagne.jpeg">
+        <img src="../images/lasagne.jpeg" alt="Lasagne">
         <h2>Description</h2>
         <p>
             This is a classic dish everyone should have 
