added photos of recipes and finished mash recipe

--- a/recipes/cheesy-mashed-potato.html
+++ b/recipes/cheesy-mashed-potato.html
@@ -9,8 +9,30 @@
     <body>
         <a href="../index.html">Homepage</a>
         <h1>Cheesy Mashed Potato</h1>
+        <img src="../images/cheesy-mashed-potato.jpeg" alt="Cheesy Mashed Potato">
         <h2>Description</h2>
+        <p>
+            Cheesy Mashed Potato is a great side that goes with most meats. 
+            have it with your Sunday Lunch, or sausages and gravy.
+            The versatility of this dish will have you needing this recipe multiple times a week!
+        </p>
         <h2>Ingredients</h2>
+        <ul>
+            <li>5 medium sized potatoes</li>
+            <li>3 Tbsp butter</li>
+            <li>200ml double cream</li>
+            <li>125g Gouda</li>
+            <li>125g Mozzarella</li>
+        </ul>
         <h2>Steps</h2>
+        <ol>
+            <li>Put water to boil on the stove.</li>
+            <li>Peel potatoes and chop them into roughly 10 pieces per potato.</li>
+            <li>Put potatoes into boiling water.</li>
+            <li>When the potatoes are soft, drain the water and add the milk and cream.</li>
+            <li>Mash the potatoes until smooth.</li>
+            <li>Once smooth, add the cheeses and continue mashing.</li>
+            <li>When the cheese has melted, serve piping hot.</li>
+        </ol>
     </body>
 </html>
